=== HEAD

* Allow String.lit to take arguments and return a SQL::PlaceholderLiteralString (jeremyevans)

* Add Model#set_associated_object, used by the many_to_one setter method, for easier overriding (jeremyevans)

* Allow use of database independent types when casting (jeremyevans)

* Give association datasets knowledge of the model object that created them and the related association reflection (jeremyevans)

* Make Dataset#select, #select_more, #order, #order_more, and #get take a block that yields a SQL::VirtualRow, similar to #filter (jeremyevans)

* Fix stored procedures in MySQL adapter when multiple arguments are used (clivecrous)

* Add :conditions association option, for easier filtering of associated objects (jeremyevans)

* Add :clone association option, for making clones of existing associations (jeremyevans)

* Handle typecasting invalid date strings (and possible other types) correctly (jeremyevans)

* Add :compress=>false option to MySQL adapter to turn off compression of client-server connection (tmm1)

* Set SQL_AUTO_IS_NULL=0 on MySQL connections, disable with :auto_is_null=>false (tmm1)

* Add :timeout option to MySQL adapter, default to 30 days (tmm1)

* Set MySQL encoding using Mysql#options so it works across reconnects (tmm1)

* Fully support blobs on SQLite (jeremyevans)

* Add String#to_sequel_blob, alias String#to_blob to that (jeremyevans)

* Fix default index names when a non-String or Symbol column is used (jeremyevans)

* Fix some ruby -w warnings (jeremyevans) (#259)

* Fix issues with default column values, table names, and quoting in the rename_column and drop_column support in shared SQLite adapter (jeremyevans)

* Add rename_column support to SQLite shared adapter (jmhodges)

* Add validates_inclusion_of validation (jdunphy)

=== 2.10.0 (2009-02-03)

* Don't use a default schema any longer in the shared PostgreSQL adapter (jeremyevans)

* Make Dataset#quote_identifier return LiteralStrings as-is (jeremyevans)
