@@ -336,12 +336,12 @@ module Sequel
     module ComplexExpressionMethods
       # Extract a datetime_part (e.g. year, month) from self:
       #
-      #   :date.extract(:year) # SQL:  extract(year FROM date)
+      #   :date.extract(:year) # SQL:  extract(year FROM "date")
       #
       # Also has the benefit of returning the result as a
       # NumericExpression instead of a generic ComplexExpression.
       def extract(datetime_part)
-        IrregularFunction.new(:extract, datetime_part.to_s.lit, :FROM, self).sql_number
+        Function.new(:extract, PlaceholderLiteralString.new("#{datetime_part} FROM ?", [self])).sql_number
       end
 
       # Return a BooleanExpression representation of self.
@@ -592,35 +592,6 @@ module Sequel
       end 
     end
     
-    # IrregularFunction is used for the SQL EXTRACT function,
-    # which don't use regular function calling syntax. The IrregularFunction
-    # replaces the commas the regular function uses with a custom
-    # join string.
-    #
-    # This shouldn't be used directly, see
-    # ComplexExpressionMethods#extract.
-    class IrregularFunction < Function
-      # The arguments to pass to the function (may be blank)
-      attr_reader :arg1, :arg2
-
-      # The SQL function to call
-      attr_reader :f
-      
-      # The literal string to use in place of a comma to join arguments
-      attr_reader :joiner
-
-      # Set the attributes to the given arguments
-      def initialize(f, arg1, joiner, arg2)
-        @f, @arg1, @joiner, @arg2 = f, arg1, joiner, arg2
-      end
-
-      # Delegate the creation of the resulting SQL to the given dataset,
-      # since it may be database dependent.
-      def to_s(ds)
-        ds.irregular_function_sql(self)
-      end
-    end
-
     # Represents an SQL JOIN clause, used for joining tables.
     class JoinClause < SpecificExpression
       # The type of join to do
