@@ -1,6 +1,8 @@
 === HEAD
 
-* Allow String.lit to take arguments and return a SQL::PlaceholderLiteralString (jeremyevans)
+* Remove SQL::IrregularFunction, no longer used internally (jeremyevans)
+
+* Allow String#lit to take arguments and return a SQL::PlaceholderLiteralString (jeremyevans)
 
 * Add Model#set_associated_object, used by the many_to_one setter method, for easier overriding (jeremyevans)
 
